# ivi_test

./: .gitignore  Readme.md  docker-compose.yml
app/: Dockerfile  main.py  pyproject.toml
test_framework/: Dockerfile  pyproject.toml
test_framework/asserts/: base.py  http.py
test_framework/containers/: containers.py
test_framework/core/http/: client.py
test_framework/core/http/api/: chocolate.py
test_framework/schemas/: enums.py
test_framework/schemas/models/: response.py
test_framework/settings/http/: base.py  chocolate.py
test_framework/tests/: conftest.py  test_chocolate.py
