[tool.poetry]
name = "tests"
version = "0.1.0"
description = ""
authors = ["mrorexov"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.8.2"
requests = "^2.32.3"
pytest = "^8.3.2"
faker = "^26.3.0"
pydantic-settings = "^2.4.0"
black = "^24.8.0"
flake8 = "^7.1.1"
dependency-injector = "^4.41.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
